<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorTransparency"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.ybq.android.spinkit.SpinKitView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                style="@style/SpinKitView.Large.FadingCircle"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:SpinKit_Color="@color/colorGray" android:layout_marginTop="16dp"
                                                android:layout_marginBottom="16dp"/>

    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
               android:id="@+id/imageView"
               android:scaleType="fitXY"
               app:layout_constraintTop_toTopOf="parent"
               android:visibility="visible"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tvTitle"
              android:textColor="@color/colorWhite"
              android:textSize="20sp"
              android:visibility="gone"
              android:text="@string/suggestions_by_fybe"
              app:layout_constraintTop_toTopOf="@id/imageView"
              android:layout_marginTop="20dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintBottom_toTopOf="@id/cancelBtn"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager">
    </android.support.v7.widget.RecyclerView>

    <Button
            android:id="@+id/cancelBtn"
            app:layout_constraintStart_toEndOf="@id/addBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            android:layout_marginBottom="20dp"
            style="@style/DefaultButton_spectial"
            android:textSize="18sp"
            android:fontFamily="@font/futuraptmedium"
            android:text="@string/cancel"
            android:layout_width="120dp"
            android:layout_height="40dp"/>

    <Button
            android:id="@+id/addBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelBtn"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            android:layout_marginBottom="20dp"
            style="@style/DefaultButton_spectial"
            android:textSize="18sp"
            android:fontFamily="@font/futuraptmedium"
            android:text="@string/add"
            android:layout_width="120dp"
            android:layout_height="40dp"/>

</android.support.constraint.ConstraintLayout>